# TD_model

./: CITATION.cff  README.md  pyproject.toml
src/td_coupling_model.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/tdcouplingmodel/: __init__.py
src/tdcouplingmodel/cli/: __init__.py  align_grids_cli.py  conversion_cube_to_xyz_cli.py  coupling_cli.py  roto_translation_cli.py  sum_cubes_cli.py
src/tdcouplingmodel/core/: __init__.py  coupling.py
src/tdcouplingmodel/io/: __init__.py  cube_io.py
src/tdcouplingmodel/preprocessing/: __init__.py  align_grids.py
src/tdcouplingmodel/utils/: __init__.py  constants.py  conversion_cube_to_xyz.py  roto_traslation.py  sum_cubes.py
